fixed fontawesome and spacing

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -21,7 +21,7 @@ $section-banner-height: 5rem;
 $section-text-size: 1rem;
 $section-text-size--sm: 0.9rem;
 
-$school-logo-height: 100px;
+$school-logo-height: 6rem;
 $contact-icon-width: 3rem;
 
 $content-v-margin: 2rem;
